--- a/home/home.css
+++ b/home/home.css
@@ -1,36 +1,36 @@
 :root {
 	--nav-height: 4.3rem;
 }
-
+body {
+	height: 300vh;
+}
 .hero {
 	width: 100%;
 	height: 60vh;
-	position: relative;
-	z-index: 1;
 	top: var(--nav-height);
 	align-content: center;
 }
 
 .hero .plane-hero {
 	position: absolute;
-	z-index: 7;
+	z-index: 4;
 	left: 17%;
-	margin-top: 4rem;
-	height: 80%;
+	margin-top: 10rem;
+	height: 45%;
 	transition: all 0.5s ease-in-out;
 }
 
 .hero video {
 	width: 100%;
-	height: 60vh;
+	height: 70vh;
 	position: fixed;
 	object-fit: cover;
 }
 
 .hero-content {
 	position: absolute;
-	top: 55%;
-	left: 64%;
+	top: 43%;
+	left: 65%;
 	font-size: 33px;
 	font-weight: 600;
 	letter-spacing: 1px;
@@ -48,17 +48,27 @@
 	z-index: 1;
 	top: var(--nav-height);
 	padding: 6rem 10rem;
+	transition: all 0.5s ease-in-out;
+}
+
+.SHK-aviation div {
+    width: 100%;
 }
 
 .SHK-aviation h1 {
-	text-align: center;
+    text-align: center;
 	text-decoration: underline;
 	font-size: 2rem;
 	padding-bottom: 2rem;
 }
 
 .SHK-aviation p {
-	text-align: justify;
+    text-align: justify;
 	line-height: 1.5rem;
 	letter-spacing: 1px;
+}
+
+.SHK-aviation.grid div {
+    width: 65%;
+    transition: all 0.5s ease-in-out;
 }
