--- a/common/nav/nav.css
+++ b/common/nav/nav.css
@@ -2,6 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+	--theme: #edbd15;
+}
+
 * {
 	padding: 0;
 	margin: 0;
@@ -23,7 +27,7 @@ header {
 	height: 4.3rem;
 	display: grid;
 	grid-template-columns: 1fr 0fr 1fr 1fr;
-	background-color: #edbd15;
+	background-color: var(--theme);
 	position: relative;
 	z-index: 5;
 	font-family: 'Kanit', sans-serif;
