--- a/home/home.css
+++ b/home/home.css
@@ -1,6 +1,7 @@
 :root {
 	--nav-height: 4.3rem;
 }
+
 body {
 	height: 300vh;
 }
@@ -43,7 +44,7 @@ body {
 .SHK-aviation {
 	width: 100%;
 	height: 50vh;
-	background-color: #edbd15;
+	background-color: var(--theme);
 	position: relative;
 	z-index: 1;
 	top: var(--nav-height);
