--- a/common/nav/nav.css
+++ b/common/nav/nav.css
@@ -3,7 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-	--theme: #edbd15;
+	--theme: #40b4e2;
+	--nav-height: 4.3rem;
 }
 
 * {
@@ -24,7 +25,7 @@ header {
 
 .top-nav {
 	width: 100%;
-	height: 4.3rem;
+	height: var(--nav-height);
 	display: grid;
 	grid-template-columns: 1fr 0fr 1fr 1fr;
 	background-color: var(--theme);
@@ -135,7 +136,7 @@ header {
 	height: 3rem;
 	background-color: #39393a;
 	position: absolute;
-	top: 4.3rem;
+	top: var(--nav-height);
 	z-index: 4;
 	transition: all 0.3s ease-in-out;
 	font-family: 'Kanit', sans-serif;
