--- a/home/home.css
+++ b/home/home.css
@@ -4,7 +4,7 @@ body {
 
 .hero {
 	width: 100%;
-	height: 60vh;
+	height: 70vh;
 	top: var(--nav-height);
 	align-content: center;
 }
@@ -21,6 +21,7 @@ body {
 .hero video {
 	width: 100%;
 	height: 70vh;
+	top: var(--nav-height);
 	position: fixed;
 	object-fit: cover;
 }
@@ -158,12 +159,16 @@ body {
 	background-color: white !important;
 }
 
+.slide-h1 {
+	overflow: hidden;
+}
+
 .vision-and-mission {
 	position: relative;
 	top: var(--nav-height);
 	width: 100%;
 	text-align: justify;
-	background: linear-gradient(-25deg, var(--theme) 50%, grey 50%);
+	background: linear-gradient(320deg, var(--theme) 50%, grey 50%);
 	height: 70vh;
 	padding: 5rem 11rem;
 	line-height: 2rem;
@@ -175,6 +180,7 @@ body {
 .vision-and-mission h1 {
 	text-align: center;
 	margin-bottom: 2rem;
+	overflow: hidden;
 }
 
 .vision-and-mission p {
@@ -192,4 +198,8 @@ body {
 	right: 6rem;
 	width: 30%;
 	margin-top: 3rem;
+}
+
+.mission h1 {
+	overflow: hidden;
 }
