--- a/common/footer/footer.css
+++ b/common/footer/footer.css
@@ -1,16 +1,7 @@
-* {
-  padding: 0%;
-  margin: 0%;
-  box-sizing: border-box;
-}
-
-.waste {
-  height: 100vh;
-}
-
 .footer {
   position: relative;
   background: rgb(61, 61, 61);
+  z-index: 2;
   bottom: 0%;
   height: 50vh;
   width: 100%;
@@ -19,6 +10,7 @@
   justify-content: center;
   align-items: center;
   letter-spacing: 1px ;
+  top: var(--nav-height);
 }
 
 .top {
@@ -46,8 +38,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: translateY(-100px);
-  -ms-transform: translateX(-100px);
 }
 
 .upper img {
