--- a/common/nav/nav.css
+++ b/common/nav/nav.css
@@ -175,7 +175,7 @@ header {
 		visibility: visible;
 	}
 
-	nav.side-bar .bottom-nav {
+	header.side-bar .bottom-nav {
 		transform: translateX(0);
 	}
 }
