--- a/common/nav/nav.css
+++ b/common/nav/nav.css
@@ -165,6 +165,7 @@ header {
 		transform: translateX(-100%);
 		transition: all 0.5s ease-in-out;
 		position: fixed;
+		overflow: hidden;
 	}
 
 	.contact {
