--- a/academics/academics.css
+++ b/academics/academics.css
@@ -7,10 +7,129 @@ body
 	background-color: rgba(107, 107, 107, 0.301);
 }
 
-.mobileclick {
-	display: none;
+section
+{
+	position: relative;
 }
 
+.again.colorchanging {
+	height: 100%;
+	width: 100%;
+	top: 20px;
+	box-shadow: none;
+	background-color: transparent;
+	transition: all 0.5s ease-in-out;
+	backdrop-filter: blur(10px);
+	position: fixed;
+	z-index: 4;
+	right: 0px;
+	transform: translateX(0px);
+	float: none;
+	border-radius: 20px;
+	margin-top: 3%;
+	overflow: hidden;
+	text-align: center;
+	border-collapse: collapse;
+}
+
+
+td {
+	border-bottom: 1px solid rgba(255, 255, 255, 0.295);
+	background-color: var(--theme);
+	width: 100%;
+	cursor: pointer;
+}
+td h3 {
+	color: #fff;
+	padding: 5%;
+	letter-spacing: 1px;
+	width: 100%;
+	transition: all 0.3s ease-in-out;
+}
+td:nth-child(4) {
+	border-bottom: none;
+}
+tr {
+	width: 100%;
+}
+td:hover {
+	background-color: #fff;
+	color: var(--theme);
+}
+h3:hover {
+	background-color: #fff;
+	color: var(--theme);
+}
+.again {
+	box-shadow: none;
+	background-color: transparent;
+	transition: all 0.5s ease-in-out;
+	backdrop-filter: blur(10px);
+	top: 20px;
+	z-index: 4;
+	width: 30%;
+	height: 49%;
+	box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.315),
+		-2px -2px 25px rgba(0, 0, 0, 0.315);
+	right: 3%;
+	float: right;
+	position: fixed;
+	transform: translateX(450px);
+	border-radius: 20px;
+	margin-top: 3%;
+	overflow: hidden;
+	text-align: center;
+	border-collapse: collapse;
+}
+
+.table {
+
+	position: fixed;
+	height: 49%;
+	width: 30%;
+	float: right;
+	border-radius: 20px;
+	text-align: center;
+	border-collapse: collapse;
+	top: 25%;
+	right: 32%;
+	overflow: hidden;
+}
+.mobileclick {
+	display: inline;
+}
+.arrow {
+	top: 46%;
+	right: 3%;
+	position: fixed;
+	float: right;
+	font-size: 40px;
+	color: var(--theme);
+	right: 0;
+	overflow: hidden;
+	text-align: center;
+	border-collapse: collapse;
+	z-index: 100;
+}
+.clicking10 {
+	transform: translateX(0px);
+}
+.arrowr
+{
+	display: none;
+}
+.arrowright
+{
+	display: block;
+}
+.arrowl
+{
+	display: block;
+}
+.arrowleft
+{
+	display: none;
+}
 .span1
 {
 	z-index: 2;
@@ -43,70 +162,17 @@ body
 	color: black;
 }
 
-.again {
-	width: 30%;
-	height: 49%;
-	box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.315),
-		-2px -2px 25px rgba(0, 0, 0, 0.315);
-	background-color: rgb(136, 133, 133);
-	right: 3%;
-	position: fixed;
-	float: right;
-	border-radius: 20px;
-	margin-top: 3%;
-	overflow: hidden;
-	text-align: center;
-}
-.table {
 
-	position: fixed;
-	height: 49%;
-	width: 30%;
-	float: right;
-	border-radius: 20px;
-	overflow: hidden;
-	text-align: center;
-	border-collapse: collapse;
-}
-
-td {
-	border-bottom: 1px solid rgba(255, 255, 255, 0.295);
-	background-color: var(--theme);
-	width: 100%;
-	cursor: pointer;
-}
-td h3 {
-	color: #fff;
-	padding: 5%;
-	letter-spacing: 1px;
-	width: 100%;
-	transition: all 0.3s ease-in-out;
-}
-td:nth-child(4) {
-	border-bottom: none;
-}
-tr {
-	width: 100%;
-}
-td:hover {
-	background-color: #fff;
-	color: var(--theme);
-}
-h3:hover {
-	background-color: #fff;
-	color: var(--theme);
-}
-
-.courseone
+.courseone , .coursetwo , .coursethree , .coursefour
 {
-	margin: 3%;
+	margin: 5%;
 	box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.315),
 		-2px -2px 25px rgba(0, 0, 0, 0.315);
 	border-radius: 20px;
 	padding: 3%;
 	line-height: 2rem;
-	font-size: 20px;
-	width: 55%;
+	font-size: 25px;
+	width: 90%;
 	float: left;
 	overflow: hidden;
 	color: #fff;
@@ -116,53 +182,14 @@ h3:hover {
 }
 .coursetwo
 {
-	margin: 3%;
-	box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.315),
-		-2px -2px 25px rgba(0, 0, 0, 0.315);
-	border-radius: 20px;
-	padding: 3%;
-	line-height: 2rem;
-	font-size: 20px;
-	width: 55%;
-	float: left;
-	overflow: hidden;
-	color: #fff;
-	background-color: rgb(255, 255, 255);
-	position: relative;
 	background: url(https://www.wallpapertip.com/wmimgs/11-110183_airplane-hd-desktop-wallpapers-for-widescreen-data-src.jpg) center/cover;
 }
 .coursethree
 {
-	margin: 3%;
-	box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.315),
-		-2px -2px 25px rgba(0, 0, 0, 0.315);
-	border-radius: 20px;
-	padding: 3%;
-	line-height: 2rem;
-	font-size: 20px;
-	width: 55%;
-	float: left;
-	overflow: hidden;
-	color: #fff;
-	background-color: rgb(255, 255, 255);
-	position: relative;
 	background: url(https://vidooly.com/blog/wp-content/uploads/2020/12/703232.jpg) center/cover;
 }
 .coursefour
 {
-	margin: 3%;
-	box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.315),
-		-2px -2px 25px rgba(0, 0, 0, 0.315);
-	border-radius: 20px;
-	padding: 3%;
-	line-height: 2rem;
-	font-size: 20px;
-	width: 55%;
-	float: left;
-	overflow: hidden;
-	color: #fff;
-	background-color: rgb(255, 255, 255);
-	position: relative;
 	background: url(https://wallsdesk.com/wp-content/uploads/2018/04/Plane-Computer-Wallpaper.jpg) center/cover;
 }
 .coursefour p , .coursefour h2 , .courseone p , .courseone h2 , .coursetwo p , .coursetwo h2 , .coursethree p , .coursethree h2
@@ -346,7 +373,7 @@ h3:hover {
 	color: var(--theme);
 	border: none;
 	cursor: pointer;
-	font-size: 18px;
+	font-size: 25px;
 	padding-bottom: 1.5rem;
 }
 
@@ -355,9 +382,18 @@ h3:hover {
 	background-color: rgb(21, 85, 223);
 	color: #fff;
 	border: none;
+	font-size: 15px;
 	border-radius: 50px;
 	width: 15%;
 	cursor: pointer;
+	transition: all 0.3s ease-in-out;
+	font-weight: bolder;
+}
+
+.watch:hover
+{
+	color: var(--theme);
+	background-color: white;
 }
 
 .span1 {
@@ -373,7 +409,9 @@ h3:hover {
 		margin: 8%;
 		padding: 3% 10%;
 		width: 84%;
+		font-size: 20px;
 		clear: right;
+		text-align: justify;
 	}
 	.titlename {
 		margin-top: 25%;
@@ -385,11 +423,17 @@ h3:hover {
 		color: #fff;
 		border: none;
 		border-radius: 10px;
-		width: 30%;
-		height: 30px;
+		width: 35%;
+		height: 40px;
 		cursor: pointer;
 	}
-	
+	.watch:hover
+	{
+		border-radius: 10px;
+		color: #fff;
+		background-color: rgb(21, 85, 223);
+	}
+
 	
 	/* java script */
 
@@ -575,5 +619,8 @@ h3:hover {
     {
         display: none;
     }
-
+	.flexdiv
+	{
+		text-align: start;
+	}
 }
