--- a/common/footer/footer.css
+++ b/common/footer/footer.css
@@ -12,6 +12,7 @@
   position: relative;
   background: rgb(61, 61, 61);
   bottom: 0%;
+  top: var(--nav-height);
   height: 50vh;
   width: 100%;
   display: flex;
@@ -37,7 +38,7 @@
 }
 
 .upper {
-  position: absolute;
+  position: relative;
   background: #fff;
   height: 100%;
   width: 50%;
