--- a/home/home.css
+++ b/home/home.css
@@ -3,6 +3,7 @@
 }
 
 .hero {
+	position: relative;
 	width: 100%;
 	height: 70vh;
 	top: var(--nav-height);
@@ -13,8 +14,8 @@
 	position: absolute;
 	z-index: 4;
 	left: 17%;
-	margin-top: 10rem;
-	height: 45%;
+	margin-top: 8rem;
+	height: 60%;
 	transition: all 0.5s ease-in-out;
 }
 
@@ -28,7 +29,7 @@
 
 .hero-content {
 	position: absolute;
-	top: 43%;
+	top: 50%;
 	left: 65%;
 	width: fit-content;
 	font-size: 33px;
@@ -39,11 +40,13 @@
 	transform: translate(-50%, -50%);
 	transition: all 0.5s ease-in-out;
 	overflow: hidden;
+	color: white;
+	text-shadow: 2px 2px 15px rgba(255, 255, 255, 1);
 }
 
 .SHK-aviation {
 	width: 100%;
-	height: 60vh;
+	height: fit-content;
 	background-color: var(--theme);
 	position: relative;
 	display: flex;
@@ -496,8 +499,52 @@
 	color: white;
 }
 
-@media (max-width:1050px) {
-	.plane-hero{
-		left: 10%;
+@media (max-width: 1050px) {
+	.hero .plane-hero {
+		left: 9%;
+	}
+}
+
+@media (max-width: 950px) {
+	.hero .plane-hero {
+		left: 9%;
+		height: 40%;
+	}
+
+	.hero-content {
+		font-size: 29px;
+	}
+}
+
+@media (max-width: 800px) {
+	.hero .plane-hero {
+		display: none;
+	}
+	.hero video {
+		display: none;
+	}
+	.hero {
+		background: url('https://media.architecturaldigest.com/photos/5988e603298aae66974b2d0d/2:1/w_3000,h_1500,c_limit/Pilotless%20Airplanes%201.jpg')
+			center/cover;
+	}
+
+	.hero::after {
+		position: absolute;
+		z-index: 3;
+		width: 100%;
+		height: 100%;
+		content: '';
+		background-color: rgba(0, 0, 0, 0.2);
+		top: 0;
+		left: 0;
+	}
+
+	.hero-content {
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		color: white;
+		position: relative;
+		z-index: 4;
 	}
 }
