--- a/home/home.css
+++ b/home/home.css
@@ -250,7 +250,7 @@
 }
 
 .heads-pos div {
-	padding: 1rem;
+	padding: 1rem 0;
 	background-color: #f8edeb;
 	height: 3rem;
 	width: 100%;
@@ -531,16 +531,6 @@
 	.mission {
 		right: 9%;
 	}
-
-	.SHK-heads {
-		background: linear-gradient(50deg, #ade8f4 50%, #f1faee 50%) !important;
-	}
-}
-
-@media (max-width: 1250px) {
-	.SHK-heads {
-		background: linear-gradient(50deg, #ade8f4 50%, #f1faee 50%) !important;
-	}
 }
 
 @media (max-width: 800px) {
@@ -606,6 +596,7 @@
 		height: 125vh;
 		display: flex;
 		justify-content: space-between;
+		padding: 4rem;
 	}
 
 	.SHK-heads > div {
@@ -628,7 +619,62 @@
 		column-gap: 5%;
 	}
 
-	.heads-pos div{
+	.heads-pos div {
 		height: fit-content;
+	}
+
+	.contact-aside {
+		display: none;
+	}
+
+	.text-area {
+		left: -100%;
+	}
+
+	.contact-title {
+		margin-top: 10%;
+	}
+
+	.content-sec {
+		padding: 0;
+	}
+
+	.input {
+		left: 50% !important;
+		transform: translateX(-50%) !important;
+		margin: 2rem 0 !important;
+		padding: 1rem !important;
+		width: 25rem !important;
+	}
+
+	.submit,
+	.next-submit {
+		left: -100%;
+	}
+}
+
+@media (max-width: 500px) {
+	.SHK-heads {
+		height: 145vh;
+		background: linear-gradient(0deg, #ade8f4 53%, #f1faee 0%) !important;
+	}
+	.input {
+		left: 50% !important;
+		transform: translateX(-50%) !important;
+		margin: 2rem 0 !important;
+		padding: 1rem !important;
+		width: 20rem !important;
+	}
+}
+
+@media (max-width: 750px) {
+	.heads-pos {
+		grid-template-columns: 1fr 1fr;
+	}
+}
+
+@media (max-width: 400px) {
+	.SHK-heads {
+		padding: 4rem 2rem;
 	}
 }
