--- a/common/nav/nav.css
+++ b/common/nav/nav.css
@@ -142,11 +142,33 @@ header {
 	transition: all 0.3s ease-in-out;
 	font-family: 'Kanit', sans-serif;
 	padding: 0 8%;
+	list-style-type: none;
 }
 
-.bottom-nav span a {
+.bottom-nav li a {
 	text-decoration: none;
 	color: white;
+	text-align: center;
+	width: 100%;
+	transition: all .3s ease-in-out;
+}
+
+.bottom-nav li {
+	position: relative;
+	width: 100%;
+	transition: all 0.3s ease-in-out;
+	text-align: center;
+	height: 100%;
+	display: flex;
+	align-items: center;
+}
+
+.bottom-nav li:hover {
+	background-color: white;
+}
+
+.bottom-nav li:hover a {
+	color: #39393a;
 }
 
 @media (max-width: 768px) {
