--- a/academics/academics.css
+++ b/academics/academics.css
@@ -518,9 +518,7 @@ h3:hover {
 		transition: all 0.5s ease-in-out;
 		overflow: auto;
 		padding: 0rem 2rem;
-		display: flex;
-		align-items: center;
-		justify-content: center;
+		display: block;
 		text-align: center;
 		border-radius: 30px;
 	}
