--- a/placement/placement.css
+++ b/placement/placement.css
@@ -1,5 +1,83 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.section0{
+  height: 70vh;
+  width: 100%;
+}
+
+.section1 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url("../common/images/TrainingAndPlacements.png");
+  background-position: top;
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  height: 60vh;
+  min-height: 386px;
+}
+.section1::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  /* background-color: rgba(46, 115, 204, 0.3); */
+  /* background: -webkit-linear-gradient(rgba(29, 38, 113, 0.4), rgba(195, 55, 100, 0.4)); */
+  background: rgba(0, 0, 0, 0.7);
+
+  z-index: 0;
+}
+
+.title {
+  margin-top: 6.5rem;
+  outline: 5px solid #15ed39;
+  padding: 4rem 6rem 4rem 6rem;
+  color: #15ed39;
+  font-size: 2rem;
+  z-index: 2;
+}
+
+.section2 {
+  width: 100%;
+  height: 50vh;
+  position: relative;
+  background: url("https://vitalsmartsindia.com/wp-content/uploads/2020/12/Corporate-Training.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.section3 {
+  width: 100%;
+  height: 23vh;
+  position: relative;
+}
+
+.section3 img {
+	position: relative;
+  width: 100%;
+  z-index: 1;
+  transform: translateY(-200px);
+}
+
+.section4{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#div{
+  height: 70vh;
+  width: 90vw;
+  background: rgb(82, 81, 81);
+  margin-top: 90px;
 }
