--- a/home/home.css
+++ b/home/home.css
@@ -219,7 +219,7 @@
 	background-color: white;
 	position: relative;
 	top: var(--nav-height);
-	background: linear-gradient(130.5deg, #ade8f4 50%, #f1faee 50%);
+	background-color: #ade8f4;
 	overflow: hidden;
 	padding: 4rem 6rem;
 }
@@ -272,6 +272,8 @@
 
 .heads + div {
 	width: 35%;
+	position: relative;
+	z-index: 1;
 	letter-spacing: 1px;
 	line-height: 2rem;
 	text-align: justify;
@@ -397,6 +399,17 @@
 	top: -3rem;
 }
 
+.SHK-heads-aside {
+	position: absolute;
+	width: 100%;
+	top: 0;
+	right: -27.5rem;
+	box-shadow: 2px 2px 15px black;
+	transform: rotate(310deg);
+	height: 152%;
+	z-index: 1;
+	overflow: hidden;
+}
 .contact-aside {
 	position: absolute;
 	width: 100%;
@@ -415,9 +428,18 @@
 	height: 100%;
 	content: '';
 	background: url(https://jooinn.com/images/airplane-37.jpg);
+	transform: rotate(312deg);
 	background-size: cover;
 	background-position: -42rem -9rem;
-	transform: rotate(312deg);
+	z-index: 1;
+}
+
+.SHK-heads-aside::after {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	content: '';
+	background-color: var(--theme);
 	z-index: 1;
 }
 
