--- a/facilities/facilities.css
+++ b/facilities/facilities.css
@@ -806,7 +806,7 @@
 		/* margin-left: 0rem !important; */
 	}
 	.container-card::after {
-		opacity: .5;
+		opacity: 0;
 		content: '>';
 		font-size: 30px;
 		font-weight: bold;
