--- a/home/home.css
+++ b/home/home.css
@@ -228,7 +228,7 @@
 	width: 100%;
 	height: 80vh;
 	text-align: justify;
-	background: linear-gradient(230deg, var(--theme) 50%, #8ecae6 50%);
+	background-color: var(--theme);
 	line-height: 2rem;
 	letter-spacing: 1px;
 	display: flex;
@@ -240,6 +240,7 @@
 	text-align: center;
 	margin-bottom: 2rem;
 	overflow: hidden;
+	text-decoration: underline;
 }
 
 .vision-and-mission p {
@@ -256,6 +257,7 @@
 	position: absolute;
 	left: 6%;
 	width: 30%;
+	z-index: 1;
 }
 
 .mission h1 {
@@ -284,6 +286,8 @@
 
 .SHK-heads h1 {
 	margin-bottom: 1rem;
+	overflow: hidden;
+	text-decoration: underline;
 }
 
 .heads {
@@ -449,6 +453,8 @@
 	position: relative;
 	text-align: center;
 	top: -3rem;
+	overflow: hidden;
+	text-decoration: underline;
 }
 
 .SHK-heads-aside {
@@ -458,6 +464,18 @@
 	right: -27.5rem;
 	box-shadow: 2px 2px 15px black;
 	transform: rotate(310deg);
+	height: 152%;
+	z-index: 1;
+	overflow: hidden;
+}
+
+.vision-mission-aside {
+	position: absolute;
+	width: 100%;
+	top: 0;
+	left: -29rem;
+	box-shadow: 2px 2px 15px black;
+	transform: rotate(51.5deg);
 	height: 152%;
 	z-index: 1;
 	overflow: hidden;
@@ -492,6 +510,15 @@
 	height: 100%;
 	content: '';
 	background-color: var(--theme);
+	z-index: 1;
+}
+
+.vision-mission-aside::after {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	content: '';
+	background-color: #8ecae6;
 	z-index: 1;
 }
 
@@ -728,9 +755,6 @@
 }
 
 @media (max-width: 1500px) {
-	.vision-and-mission {
-		background: linear-gradient(226.5deg, var(--theme) 50%, #8ecae6 50%);
-	}
 	.input:nth-of-type(1) {
 		left: 13rem !important;
 		padding-left: 15rem !important;
@@ -739,7 +763,7 @@
 	.input:nth-of-type(1):hover,
 	.input:nth-of-type(1):focus {
 		left: 30rem;
-		padding-left: 5rem;
+		padding-left: 21rem;
 	}
 
 	.input:nth-of-type(2) {
@@ -750,12 +774,12 @@
 	.input:nth-of-type(2):hover,
 	.input:nth-of-type(2):focus {
 		left: 30rem;
-		padding-left: 11rem;
+		padding-left: 21rem;
 	}
 
 	.input:nth-of-type(3) {
 		left: 22rem !important;
-		padding-left: 17rem !important;
+		padding-left: 22rem !important;
 	}
 
 	.input:nth-of-type(3):hover,
@@ -763,6 +787,10 @@
 		left: 36rem;
 		padding-left: 10rem;
 		width: 40% !important;
+	}
+
+	.vision-mission-aside {
+		left: -24rem;
 	}
 }
 
@@ -803,7 +831,6 @@
 		justify-content: space-around;
 		padding: 10% !important;
 		height: fit-content !important;
-		background: linear-gradient(0, var(--theme) 50%, #8ecae6 50%) !important;
 	}
 
 	.vision {
