--- a/facilities/facilities.css
+++ b/facilities/facilities.css
@@ -205,6 +205,7 @@
 	background-color: #2c394b;
 	color: #edbd15;
 	font-weight: bold;
+	cursor: pointer;
 	margin: 20px;
 	transition: all 0.2s ease-in-out;
 	-webkit-box-pack: center;
@@ -806,7 +807,7 @@
 		/* margin-left: 0rem !important; */
 	}
 	.container-card::after {
-		opacity: 0;
+		opacity: .5;
 		content: '>';
 		font-size: 30px;
 		font-weight: bold;
